--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="title_activity_gallery">gallery</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string-array name="planets_array">
+            <item>sports</item>
+            <item>Housing</item>
+            <item>food</item>
+            <item>village developement</item>
+
+        </string-array>
 </resources>
