--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string-array name="planets_array">
+            <item></item>
             <item>sports</item>
             <item>Housing</item>
             <item>food</item>
